# nasa-airport-pushback

./: README.md
1st Place/Phase 1/: .gitignore  README.md  requirements.txt
1st Place/Phase 1/submission/: config.py  solution.py  utilities.py
1st Place/Phase 1/training/: .telemetry  pyproject.toml  setup.cfg
1st Place/Phase 2/: .gitignore  README.md  requirements.txt
1st Place/Phase 2/code/: config.py  predict.py  train.py  utilities.py
2nd Place/Phase 1/: .gitignore  README.md  requirements.txt
2nd Place/Phase 1/src/: config.py  make_dataset.py  run_inference.py  run_training.py  utils.py
2nd Place/Phase 2/: .gitignore  README.md  requirements.txt  setup.py
2nd Place/Phase 2/src/: __init__.py  client.py  config.py  make_dataset.py  run_inference.py  run_training.py  server.py  utils.py
3rd Place/Phase 1/: Feature_Processing-AirplaneCodes.ipynb  Feature_Processing-ETD_PQDM.ipynb  Feature_Processing-ETD_no_PQDM.ipynb  Feature_Processing-TaxiTimeToGate.ipynb  README.md  Run_Inference.ipynb  Train_Models.ipynb  helper.py  pushback_plane_tf_deb.yml  run_model.py
3rd Place/Phase 2/: .gitignore  README.md  config.py  predict.py  pushback_plane_tf_deb.yml  pushback_plane_tf_mac.yml  train.py  utils.py
4th Place/Phase 1/: .gitignore  README.md  pyproject.toml  requirements.txt
4th Place/Phase 2/: .gitignore  CHANGELOG.md  README.md  requirements.txt
5th Place/Phase 1/: README.md  requirements.txt
5th Place/Phase 2/: README.md  pyproject.toml  requirements.txt
5th Place/Phase 2/src/: features.py  network.py  predict.py  train.py  utils.py
(+105 files in other folders)
